tests/baselines/reference/exportDefaultAlias_excludesEverything.errors.txt
tests/cases/compiler/exportDefaultAlias_excludesEverything.ts(1,26): error TS2528: A module cannot have multiple default exports.
tests/cases/compiler/exportDefaultAlias_excludesEverything.ts(3,16): error TS2528: A module cannot have multiple default exports.


==== tests/cases/compiler/exportDefaultAlias_excludesEverything.ts (2 errors) ====
    export default interface A {}
                             ~
!!! error TS2528: A module cannot have multiple default exports.
    interface B {}
    export default B;
                   ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2730 tests/cases/compiler/exportDefaultAlias_excludesEverything.ts:3:16: This export conflicts with the first.
    